# OBlender-android

./: settings.gradle
.github/workflows/: android.yml
OBLFiles/: build.gradle
OBLFiles/src/androidTest/java/com/epai/oblfiles/: ExampleInstrumentedTest.java
OBLFiles/src/main/: AndroidManifest.xml
OBLFiles/src/main/assets/4.0/config/datafiles/assets/geometry_nodes/: procedural_hair_node_assets.blend
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ab/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ar/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ca/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/cs/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/de/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/es/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/eu/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/fa/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/fi/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/fr/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ha/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/he/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/hi/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/hu/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/id/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/it/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ja/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ka/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ko/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ky/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/nl/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/pl/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/pt/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/pt_BR/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/ru/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/sk/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/sr/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/sr@latin/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/sv/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/th/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/tr/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/4.0/config/datafiles/locale/uk/LC_MESSAGES/: blender.mo
OBLFiles/src/main/assets/examples/: ball-in-grass.blend
OBLFiles/src/main/assets/python/lib/python3.11/: tempfile.py
OBLFiles/src/main/assets/scripts/addons/cycles/lib/: kernel_gfx1030.fatbin  kernel_gfx1031.fatbin  kernel_gfx1032.fatbin  kernel_gfx1034.fatbin  kernel_gfx1035.fatbin  kernel_gfx900.fatbin  kernel_gfx902.fatbin  kernel_gfx90c.fatbin  kernel_optix.ptx
OBLFiles/src/main/assets/scripts/addons/cycles/shader/: node_absorption_volume.oso  node_add_closure.oso  node_ambient_occlusion.oso  node_anisotropic_bsdf.oso  node_attribute.oso  node_background.oso  node_bevel.oso  node_blackbody.oso  node_brick_texture.oso  node_brightness.oso  node_bump.oso  node_camera.oso  node_checker_texture.oso  node_clamp.oso  node_combine_color.oso  node_combine_hsv.oso  node_combine_rgb.oso  node_combine_xyz.oso  node_convert_from_color.oso  node_convert_from_float.oso  node_convert_from_int.oso  node_convert_from_normal.oso  node_convert_from_point.oso  node_convert_from_vector.oso  node_diffuse_bsdf.oso  node_displacement.oso  node_emission.oso  node_environment_texture.oso  node_float_curve.oso  node_fresnel.oso  node_gamma.oso  node_geometry.oso  node_glass_bsdf.oso  node_glossy_bsdf.oso  node_gradient_texture.oso  node_hair_bsdf.oso  node_hair_info.oso  node_holdout.oso  node_hsv.oso  node_ies_light.oso  (+61 more)
OBLFiles/src/main/assets/scripts/addons/node_wrangler/: operators.py
OBLFiles/src/main/assets/scripts/startup/bl_ui/: space_image.py
OBLFiles/src/main/java/com/epai/oblfiles/: FileUtils.java  InstallOBLFiles.java
OBLFiles/src/test/java/com/epai/oblfiles/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/epai/oblender/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_native_app_glue.cc  android_native_app_glue.h  java_godot_lib_jni.cpp  java_godot_lib_jni.h  native-lib.cpp
app/src/main/cpp/creator/: creator.cc  creator.h  creator_args.cc  creator_signals.cc
app/src/main/java/com/epai/oblender/: GodotLib.java  GodotRenderView.java  MainActivity.java  OBLButtonID.java  OBLNativeActivity.java  OblSettingFragment.java  PwdKeyboardView.java  ScreenUtils.java  SoftKeyBoardListener.java  StartupActivity.java  WindowGLSurfaceView.java  WindowWindow.java
app/src/main/java/com/epai/oblender/input/: GodotEditText.java  GodotInputHandler.java  GodotTextInputWrapper.java  Joystick.java
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLControllerManager.java
app/src/main/res/layout/: activity_main.xml  activity_startup.xml  fragment_obl_setting.xml  fragment_window.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: key_password_number.xml  pwdkeyboardviewattr.xml
app/src/test/java/com/epai/oblender/: ExampleUnitTest.java
backup-20260619-025500/: FileUtils.java  OBLNativeActivity.java  StartupActivity.java  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
